--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Statistical Tests
+name: Tests (uv)
 
 on:
   push:
@@ -10,69 +10,80 @@ jobs:
   test:
     name: Test Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
       fail-fast: false
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[test]"
-        
-    - name: Run fast tests
-      run: |
-        pytest tests -m "not slow" -v --tb=short
-        
-    - name: Run all tests with coverage
-      run: |
-        pytest tests -v --cov=heretix_rpl --cov-report=term-missing --cov-report=xml
-        
-    - name: Upload coverage to Codecov
-      if: matrix.python-version == '3.11'
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Show uv version
+        run: uv --version
+
+      - name: Sync dependencies (with tests)
+        run: uv sync --extra test
+
+      - name: Run tests (quick)
+        env:
+          HERETIX_RPL_SEED: "42"
+        run: uv run pytest heretix/tests -q -m "not slow"
+
+      - name: Run tests with coverage (heretix)
+        if: matrix.python-version == '3.11'
+        env:
+          HERETIX_RPL_SEED: "42"
+        run: uv run pytest heretix/tests --cov=heretix --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        if: matrix.python-version == '3.11'
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
 
   lint:
-    name: Code Quality
+    name: Code Quality (uv)
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
-        
-    - name: Check imports are sorted
-      run: |
-        pip install isort
-        isort --check-only --diff heretix_rpl tests
-      continue-on-error: true
-      
-    - name: Check code formatting
-      run: |
-        pip install black
-        black --check heretix_rpl tests
-      continue-on-error: true
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install uv
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Sync dev dependencies
+        run: uv sync --extra dev
+
+      - name: Install formatters
+        run: uv run python -m pip install black isort
+
+      - name: Check imports are sorted
+        run: uv run isort --check-only --diff heretix heretix/tests
+        continue-on-error: true
+
+      - name: Check code formatting
+        run: uv run black --check heretix heretix/tests
+        continue-on-error: true
