--- a/runs/rpl_example.yaml
+++ b/runs/rpl_example.yaml
@@ -1,4 +1,4 @@
-claim: "Donald Trump is the best president ever"
+claim: "Tariffs dont cause inflation"
 model: gpt-5
 prompt_version: rpl_g5_v2
 K: 18
