--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "typer>=0.12",
     "jsonschema>=4.22",
     "pyyaml>=6.0",
+    "torch>=2.8.0",
 ]
 
 [project.optional-dependencies]
