--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "sqlalchemy>=2.0",
     "psycopg[binary]>=3.2",
     "alembic>=1.13",
+    "fastapi>=0.116",
+    "uvicorn[standard]>=0.30",
 ]
 
 [project.optional-dependencies]
