--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "alembic>=1.13",
     "fastapi>=0.116",
     "uvicorn[standard]>=0.30",
+    "httpx>=0.27",
 ]
 
 [project.optional-dependencies]
