--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "fastapi>=0.116",
     "uvicorn[standard]>=0.30",
     "httpx>=0.27",
+    "stripe>=11.0",
 ]
 
 [project.optional-dependencies]
