Add deployment configuration for Fly.io and document rollout

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,23 @@ DATABASE_URL=postgresql+psycopg://heretix:heretix@localhost:5433/heretix
 
 # Production Postgres connection (set in deployment secrets)
 # DATABASE_URL_PROD=postgresql+psycopg://user:password@host/dbname?sslmode=require
+
+# API/UI URLs (override in production if needed)
+API_URL=http://127.0.0.1:8000
+APP_URL=http://127.0.0.1:3000
+
+# Email / Auth
+EMAIL_SENDER_ADDRESS=hello@heretix.local
+# POSTMARK_TOKEN=your-postmark-token
+MAGIC_LINK_TTL_MINUTES=10
+SESSION_TTL_DAYS=30
+SESSION_COOKIE_NAME=heretix_session
+
+# Stripe (test keys for local, live keys via secrets in production)
+# STRIPE_SECRET=sk_test_...
+# STRIPE_WEBHOOK_SECRET=whsec_...
+# STRIPE_PRICE_STARTER=price_test_starter
+# STRIPE_PRICE_CORE=price_test_core
+# STRIPE_PRICE_PRO=price_test_pro
+# STRIPE_SUCCESS_PATH=/billing/success
+# STRIPE_CANCEL_PATH=/billing/cancel
