--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "numpy>=1.26",
     "openai>=1.40",
     "pydantic>=2.6",
+    "pydantic-settings>=2.5",
+    "email-validator>=2.2",
     "python-dotenv>=1.0",
     "typer>=0.12",
     "jsonschema>=4.22",
