--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "openai>=1.40",
     "requests>=2.32",
     "tldextract>=5.1",
+    "filelock>=3.15",
     "pydantic>=2.6",
     "pydantic-settings>=2.5",
     "email-validator>=2.2",
