--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "openai>=1.40",
     "requests>=2.32",
     "tldextract>=5.1",
+    "beautifulsoup4>=4.12",
+    "python-dateutil>=2.9",
     "filelock>=3.15",
     "pydantic>=2.6",
     "pydantic-settings>=2.5",
