--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "uvicorn[standard]>=0.30",
     "httpx>=0.27",
     "stripe>=11.0",
+    "duckdb>=1.4.1",
 ]
 
 [project.optional-dependencies]
