--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "httpx>=0.27",
     "stripe>=11.0",
     "duckdb>=1.4.1",
+    "google-cloud-storage>=3.4.1",
 ]
 
 [project.optional-dependencies]
