feat: add Grok (xAI) provider support targeting grok-4-fast-non-reasoning

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,13 @@ OPENAI_API_KEY=your-openai-api-key-here
 # Optional: Other API keys if needed
 # ANTHROPIC_API_KEY=your-anthropic-key-here
 # GROK_API_KEY=your-grok-key-here
+# XAI_API_KEY=your-grok-key-here  # alias supported
+
+# xAI (Grok) provider tuning
+# HERETIX_ENABLE_GROK=1
+# HERETIX_GROK_MODEL=grok-4-fast-non-reasoning
+# HERETIX_XAI_RPS=1
+# HERETIX_XAI_BURST=2
 
 # Local Postgres connection (Docker Compose)
 DATABASE_URL=postgresql+psycopg://heretix:heretix@localhost:5433/heretix
