--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "email-validator>=2.2",
     "python-dotenv>=1.0",
     "typer>=0.12",
+    "rich>=13.7",
     "jsonschema>=4.22",
     "pyyaml>=6.0",
     "sqlalchemy>=2.0",
