--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,13 @@ test = [
     "pytest>=8.0",
     "pytest-cov>=4.0",
     "hypothesis>=6.0,<7.0",
+    "responses>=0.24",
 ]
 dev = [
     "pytest>=8.0",
     "pytest-cov>=4.0",
     "hypothesis>=6.0,<7.0",
+    "responses>=0.24",
     "pre-commit>=3.0",
 ]
 
