--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
+    live: marks tests that hit live providers (requires API keys)
 testpaths = heretix/tests
 python_files = test_*.py
 python_classes = Test*
