CI: include eval smoke tests in default pytest suite

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,9 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     live: marks tests that hit live providers (requires API keys)
-testpaths = heretix/tests
+testpaths =
+    heretix/tests
+    tests/evals
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
