--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,13 +39,13 @@ jobs:
       - name: Run tests (quick)
         env:
           HERETIX_RPL_SEED: "42"
-        run: uv run pytest heretix/tests -q -m "not slow"
+        run: uv run pytest -q -m "not slow"
 
       - name: Run tests with coverage (heretix)
         if: matrix.python-version == '3.11'
         env:
           HERETIX_RPL_SEED: "42"
-        run: uv run pytest heretix/tests --cov=heretix --cov-report=term-missing --cov-report=xml
+        run: uv run pytest --cov=heretix --cov-report=term-missing --cov-report=xml
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.11'
